<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LOADING">Loading…</string>
    <string name="app_name">Weapons Mod</string>
    <string name="bonuslist">Bonus Mod !</string>
    <string name="check_text">The mod you requested is ready to download. After you click on Download, the download will start immediately. Do not close or minimize the application, but wait for it to complete.</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded. Press the button to continue</string>
    <string name="downloading">Downloading, please wait</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="error">Error</string>
    <string name="error_content">Your device does not have Minecraft PE installed on it, or its version is outdated. Please install the game and try again.</string>
    <string name="finish">Done</string>
    <string name="guide">✓ Choose an addon\n ✓ Click &lt;b&gt;Install addon&lt;/b&gt; \n ✓ Follow the instructions \n ✓ Run the game, when it is done \n &lt;br&gt; ✓ Is it easy, isn\'t? \n &lt;br&gt; ✓ Enjoy it! \n &lt;br&gt;</string>
    <string name="guide_gotit">Got IT!</string>
    <string name="guide_thanks">Thank you!</string>
    <string name="guide_title">Help</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="install">Install</string>
    <string name="install_addon">Install addon</string>
    <string name="install_map">Install map</string>
    <string name="install_process">INSTALLATION IN PROGRESS</string>
    <string name="installation">Installation</string>
    <string name="item_view_role_description">Tab</string>
    <string name="loading">Loading…</string>
    <string name="maps">Maps</string>
    <string name="mods">Mods</string>
    <string name="next">Next</string>
    <string name="open">Open in the game</string>
    <string name="open_text">The mod has been successfully downloaded. \n Click the button to check our 100% free bonus mod for you. \n Or Click the button to open it in Minecraft. In the game you will see that the mod is imported. Wait and then find it and turn it on in the settings. Enjoy the game! \n</string>
    <string name="hometext">Hi my dear friends! \n Attention: After Instalation, Don\'t uninstall the application, otherwise nothing will work.</string>
    <string name="maintext">1) Check if the last version of minecraft is installed on your device. \n\n 2) Check if There is Free Space on your device. \n\n 3) You May Need another File Manager. (Not necessary Step) \n </string>
    <string name="permission">The application needs access to files to install the map or the addon</string>
    <string name="popup_text">It\'s downloaded. Click Play to add an addon or map to the game.</string>
    <string name="problem">Problem or Violation</string>
    <string name="promo_dialog_done">Opening app\'s page...</string>
    <string name="promo_dialog_no">NO</string>
    <string name="promo_dialog_text">Do you want to open the app\'s page?</string>
    <string name="promo_dialog_title">Going to Play Store</string>
    <string name="promo_dialog_yes">Yes, please</string>
    <string name="rate">Rate Us</string>
    <string name="rate_btn_text">Rate</string>
    <string name="rate_cancel">Later</string>
    <string name="rate_dialog_action_later">Later</string>
    <string name="rate_dialog_action_never">No, thanks</string>
    <string name="rate_dialog_action_rate">Rate</string>
    <string name="rate_dialog_message">If you enjoy using %s, please help us by rating it. It only takes a few seconds!</string>
    <string name="rate_dialog_thank_you">Thank you!</string>
    <string name="rate_dialog_title">Rate %s.</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it? It wont\'t take more than minute. Thank you for your support!</string>
    <string name="rate_rate">Rate now</string>
    <string name="rate_thanks">No, thanks</string>
    <string name="rate_title">Rate this app</string>
    <string name="recommend">We recommend:</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="share">Share</string>
    <string name="share_text">I am using this app to install mods and maps for MCPE!</string>
    <string name="show_all">(Mixed)</string>
    <string name="sorted_by_date">Sorted by publication date</string>
    <string name="splash_counter">App is done loading in:</string>
    <string name="splash_loading_message">Fetching the mods list...</string>
    <string name="splash_loading_title">Loading</string>
    <string name="title_activity_detail">Back to list</string>
    <string name="toast_message">Toast message</string>
    <string name="type">TYPE:</string>
    <string name="type_addon">ADDONS</string>
    <string name="type_map">MAPS</string>
    <string name="version">VERSION:</string>
    <string name="vote_counted">Vote counted</string>
    <string name="vote_thanks">Your vote is counted. Thanks!</string>
    <string name="want_to_install">Do you want to install?</string>
    <string name="write">Email Us</string>
    <string name="done">Done.</string>

</resources>
