<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/nativeplacmenetplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:id="@+id/TradPlusNative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/AdmobNative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <FrameLayout
                android:id="@+id/applovinnative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/open_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bonus_btn"
            style="@style/AppTheme.Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="go_to_bonus"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/bonuslist"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:background="@drawable/btn_border_gray"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/gray_btn_text_color"
            android:onClick="onButtonClick"
            android:text="@string/open" />
    </LinearLayout>
</ScrollView>
