<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/nativeplacmenetplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:id="@+id/TradPlusNative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/AdmobNative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <FrameLayout
                android:id="@+id/applovinnative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="@dimen/card_album_radius">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/craft"
                    android:gravity="center"
                    android:paddingLeft="@dimen/album_title_padding"
                    android:paddingTop="10dp"
                    android:paddingRight="@dimen/album_title_padding"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/album_title"
                    android:textStyle="bold" />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="bottom|center"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#ff5a5a5a"
                    app:sliderIndicatorUnselectedColor="#ffffffff"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="14dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="24dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1.0"
                            android:background="@drawable/ic_eye_orange" />

                        <TextView
                            android:id="@+id/views"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:textSize="14.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/downloadImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1.0"
                            android:background="@drawable/ic_download_orange" />

                        <TextView
                            android:id="@+id/downloads"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="TextView"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:textSize="14.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1.0"
                            android:text="@string/version"
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:textSize="14.0sp" />

                        <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text=""
                            android:textColor="@color/colorPrimaryDarkSplash"
                            android:textSize="14.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            style="@style/AppTheme.Btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp"
            android:onClick="download_click"
            android:text="@string/next" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_border_white"
            android:padding="10dp"
            android:text="" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/recommend_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="0dp"
                android:paddingTop="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/recommend"
                    android:textColor="#ff000000"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="50dp"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>